--- a/stylesV1.css
+++ b/stylesV1.css
@@ -29,18 +29,7 @@ body {
 
 html {
 	scroll-behavior: smooth;
-}
-
-#events {
-	scroll-margin-top: 550px;
-}
-
-#about {
-	scroll-margin-top: 400px;
-}
-
-#menu {
-	scroll-margin-top: 130px;
+	scroll-padding-top: 4rem;
 }
 
 .container {
@@ -570,7 +559,7 @@ footer {
 
 	nav {
 		position: absolute;
-		top: 70px;
+		top: 100%;
 		left: 0;
 		width: 100%;
 		background-color: var(--dark-green);
